--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -11,6 +11,9 @@
   justify-content: center;
   height: 100%;
   position: relative;
+  background: transparent;
+  backdrop-filter: none;
+  -webkit-backdrop-filter: none;
 }
 
 .landing--img {
@@ -22,8 +25,15 @@
   height: var(--img-size);
   object-fit: cover;
   border-radius: 50%;
-  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
   transition: opacity 0.3s;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: crisp-edges;
+  background: transparent;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  filter: none;
+  -webkit-filter: none;
 }
 
 .landing--container-left {
@@ -166,8 +176,9 @@
     --img-size: 200px;
     left: 50%;
     top: 30%;
-    border: 8px solid #eaeaea;
+    border: 4px solid #eaeaea;
     transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
   }
   .landing--container-left {
     flex: initial;
